--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -4,6 +4,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Lab 1: Expressions\n",
+    "\n",
+    "Welcome to Data144: *Foundations of Data Science*!  Each week you will complete a lab assignment like this one.  You can't learn technical subjects without hands-on practice, so labs are an important part of the course.\n",
+    "\n",
+    "Before we get started, there are some administrative details.\n",
+    "\n",
+    "The weekly lab session has two components: a homework with questions and discussion (not using the computer) about recent material, and a lab assignment (like this one!) that develops skills with computational and inferential concepts. These lab assignments and homework are a required part of the course.\n",
+    "\n",
+    "Attend your own assigned lab section and make progress substantial enough for your work to be checked off by course staff. Before you leave, you need to **submit the lab and have a staff member check you off**. Note that your submitted work need not be complete in order to receive full credit if you were checked off. \n",
+    "\n",
+    "Collaborating on labs is more than okay -- it's encouraged! You should rarely remain stuck for more than a few minutes on questions in labs, so ask a neighbor or an instructor for help. (Explaining things is beneficial, too -- the best way to solidify your knowledge of a subject is to explain it.) Please don't just share answers, though.\n",
+    "\n",
+    "#### Today's lab\n",
+    "\n",
+    "In today's lab, you'll learn how to:\n",
+    "\n",
+    "1. navigate Jupyter notebooks (like this one);\n",
+    "2. write and evaluate some basic *expressions* in Python, the computer language of the course;\n",
+    "3. call *functions* to use code other people have written; and\n",
+    "4. break down Python code into smaller parts to understand it.\n",
+    "\n",
+    "This lab covers parts of [Chapter 3](http://www.inferentialthinking.com/chapters/03/programming-in-python.html) of the online textbook. You should read the examples in the book, but not right now. Instead, let's get started!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 1. Jupyter notebooks\n",
     "This webpage is called a Jupyter notebook. A notebook is a place to write programs and view their results, and also to write text.\n",
     "\n",
@@ -38,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,11 +82,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"\\N{WAVING HAND SIGN}, \\N{EARTH GLOBE ASIA-AUSTRALIA}!\")"
+    "print(\"\\N{grinning face}, \\N{rolling on the floor laughing}!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That's right, Python 3 even has support for [emojis](https://unicode.org/emoji/charts/full-emoji-list.html)! "
    ]
   },
   {
@@ -70,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "deletable": false
    },
@@ -129,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "scrolled": true
@@ -141,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "for_assignment_type": "solution"
    },
@@ -191,52 +226,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.6. Submitting your work\n",
-    "All assignments in the course will be distributed as notebooks like this one, and you will submit your work from the notebook. We will use a system called OK that checks your work and helps you submit. At the top of each assignment, you'll see a cell like the one below that prompts you to identify yourself. Run it and follow the instructions. Please use your @berkeley.edu address when logging in."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false
-   },
-   "outputs": [],
-   "source": [
-    "# Don't change this cell; just run it. \n",
-    "# The result will give you directions about how to log in to the submission system, called OK.\n",
-    "# Once you're logged in, you can run this cell again, \n",
-    "# but it won't ask you who you are because it remembers you. \n",
-    "# However, you will need to log in once per assignment.\n",
-    "# When you log-in please hit return (not shift + return) after typing in your email\n",
-    "\n",
-    "from client.api.notebook import Notebook\n",
-    "ok = Notebook('lab01.ok')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "When you finish an assignment, you need to submit it by running the submit command below. It's fine to submit multiple times. OK will only try to grade your final submission for each assignment. Don't forget to submit your lab assignment at the end of section, even if you haven't finished everything."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": false
-   },
-   "outputs": [],
-   "source": [
-    "_ = ok.submit()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# 2. Numbers\n",
     "\n",
     "Quantitative information arises everywhere in data science. In addition to representing commands to print out lines, expressions can represent numbers and methods of combining numbers. The expression `3.2500` evaluates to the number 3.25. (Run the cell and see.)"
@@ -244,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -290,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "deletable": false
    },
@@ -366,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,9 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -424,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,10 +428,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Calculate the yearly salary given a semimonthly salary \n",
     "semimonthly_salary = 841.25\n",
     "monthly_salary = 2 * semimonthly_salary\n",
     "number_of_months_in_a_year = 12\n",
@@ -463,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,72 +473,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.1. Checking your code\n",
-    "Now that you know how to name things, you can start using the built-in *tests* to check whether your work is correct. Sometimes, there are multiple tests for a single question, and passing all of them is required to receive credit for the question. Please don't change the contents of the test cells. \n",
+    "# 3.1. Comments\n",
     "\n",
-    "Go ahead and attempt Question 3.2. Running the cell directly after it will test whether you have assigned `seconds_in_a_decade` correctly in Question 3.2. If you haven't, this test will tell you the correct answer. Resist the urge to just copy it, and instead try to adjust your expression. (Sometimes the tests will give hints about what went wrong...)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "source": [
-    "**Question 3.2.** Assign the name `seconds_in_a_decade` to the number of seconds between midnight January 1, 2010 and midnight January 1, 2020. Note that there are two leap years in this span of a decade. A non-leap year has 365 days and a leap year has 366 days.\n",
+    "You may have noticed this line in the cell above: \n",
     "\n",
-    "*Hint:* If you're stuck, the next section shows you how to get hints.\n",
+    "\\# Calculate the yearly salary given a semimonthly salary\n",
     "\n",
-    "<!--\n",
-    "BEGIN QUESTION\n",
-    "name: q32\n",
-    "-->"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "deletable": false
-   },
-   "outputs": [],
-   "source": [
-    "# Change the next line \n",
-    "# so that it computes the number of seconds in a decade \n",
-    "# and assigns that number the name, seconds_in_a_decade.\n",
-    "\n",
-    "seconds_in_a_decade = ...\n",
-    "\n",
-    "# We've put this line in this cell \n",
-    "# so that it will print the value you've given to seconds_in_a_decade when you run it.  \n",
-    "# You don't need to change this.\n",
-    "seconds_in_a_decade"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "outputs": [],
-   "source": [
-    "ok.grade(\"q32\");"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3.2. Comments\n",
-    "You may have noticed these lines in the cell in which you answered Question 3.2:\n",
-    "\n",
-    "    # Change the next line \n",
-    "    # so that it computes the number of seconds in a decade \n",
-    "    # and assigns that number the name, seconds_in_a_decade.\n",
-    "    \n",
     "This is called a *comment*. It doesn't make anything happen in Python; Python ignores anything on a line after a `#`.  Instead, it's there to communicate something about the code to you, the human reader. Comments are extremely useful. \n",
     "\n",
     "\n",
@@ -571,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "deletable": false
    },
@@ -644,18 +572,6 @@
     "# The estimated distance the hammer actually fell, in meters.\n",
     "# Fill this in.\n",
     "estimated_distance_m = ..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "outputs": [],
-   "source": [
-    "ok.grade(\"q331\");"
    ]
   },
   {
@@ -677,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "deletable": false
    },
@@ -711,15 +627,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "ok.grade(\"q332\");"
+    "What answer did you get?  Talk with your neighbors to see if you get the same answer. "
    ]
   },
   {
@@ -735,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {
     "deletable": false
    },
@@ -802,18 +713,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "outputs": [],
-   "source": [
-    "ok.grade(\"q411\");"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -823,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {
     "deletable": false
    },
@@ -913,18 +812,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "outputs": [],
-   "source": [
-    "ok.grade(\"q51\");"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -934,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {
     "deletable": false
    },
@@ -1025,53 +912,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "outputs": [],
-   "source": [
-    "ok.grade(\"q511\");"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You're done with Lab 1!  Be sure to run the tests and verify that they all pass, then choose **Save and Checkpoint** from the **File** menu, then **run the final cell** to submit your work.  If you submit multiple times, your last submission will be counted."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "deletable": false
-   },
-   "outputs": [],
-   "source": [
-    "# For your convenience, you can run this cell to run all the tests at once!\n",
-    "import os\n",
-    "_ = [ok.grade(q[:-3]) for q in os.listdir(\"tests\") if q.startswith('q')]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Important.** Before you leave lab, run this final cell to submit your work. Now, get checked off by flagging down a staff member. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false
-   },
-   "outputs": [],
-   "source": [
-    "_ = ok.submit()"
+    "You're done with Lab 1!  Be sure get checked off before you go."
    ]
   }
  ],
@@ -1092,7 +936,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
