--- a/hw/hw01/hw01.ipynb
+++ b/hw/hw01/hw01.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Homework 1: Causality and Expressions\n",
+    "# Homework 1: Causality and Expressions \n",
+    "## Due: Sun 2/2/2020 11:59pm\n",
     "\n",
     "Please complete this notebook by filling in the cells provided. Before you begin, execute the following cell to load the provided tests."
    ]
@@ -32,14 +33,6 @@
     "For all problems that you must write explanations and sentences for, you **must** provide your answer in the designated space. Moreover, throughout this homework and all future ones, please be sure to not re-assign variables throughout the notebook! For example, if you use `max_temperature` in your answer to one question, do not reassign it later on. Otherwise, you will fail tests that you thought you were passing previously!\n"
    ]
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Once you're finished, select \"Save and Checkpoint\" in the File menu and then execute the `submit` cell below. The result will contain a link that you can use to check that your assignment has been submitted successfully. If you submit more than once before the deadline, we will only grade your final submission."
-   ]
-  },
-
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -82,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In lecture, we counted the number of times that the literary characters were named in each chapter of the classic book, [Little Women](https://www.inferentialthinking.com/chapters/01/3/1/literary-characters). In computer science, the word \"character\" also refers to a letter, digit, space, or punctuation mark; any single element of a text. The following code generates a scatter plot in which each dot corresponds to a chapter of Little Women. The horizontal position of a dot measures the number of periods in the chapter. The vertical position measures the total number of characters."
+    "In lecture, we counted the number of times that the literary characters were named in each chapter of the classic book, [Little Women](https://www.inferentialthinking.com/chapters/01/3/1/literary-characters). In data science, the word \"character\" also refers to a letter, digit, space, or punctuation mark; any single element of a text. The following code generates a scatter plot in which each dot corresponds to a chapter of Little Women. The horizontal position of a dot measures the number of periods in the chapter. The vertical position measures the total number of characters."
    ]
   },
   {
@@ -162,7 +155,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "deletable": false
    },
    "outputs": [],
@@ -313,11 +305,10 @@
     "Check that your answers are in the correct format. This test *does not* check that you answered correctly; only that you assigned a number successfully in each multiple-choice answer cell."
    ]
   },
-{
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "deletable": false
    },
    "outputs": [],
@@ -361,9 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "jobs_q1 = ..."
@@ -385,9 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "jobs_q2 = ..."
@@ -419,11 +406,10 @@
     "Check that your answers are in the correct format. This test *does not* check that you answered correctly; only that you assigned a number successfully in each multiple-choice answer cell."
    ]
   },
-{
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "deletable": false
    },
    "outputs": [],
@@ -458,9 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dissimilarity = ...\n",
@@ -474,11 +458,10 @@
     "Use the cell below to test for formatting (in this case, that dissimilarity is a number)"
    ]
   },
-{
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "deletable": false
    },
    "outputs": [],
@@ -586,20 +569,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## 7. Studying the Survivors\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "The Reverend Henry Whitehead was skeptical of John Snow’s conclusion about the Broad Street pump. After the Broad Street cholera epidemic ended, Whitehead set about trying to prove Snow wrong.  (The history of the event is detailed [here](http://www.ncbi.nlm.nih.gov/pmc/articles/PMC1034367/pdf/medhist00183-0026.pdf).)\n",
     "\n",
@@ -617,22 +594,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Assign survivor_answer to 1, 2, or 3\n",
     "survivor_answer = ..."
    ]
   },
-{
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "deletable": false
    },
    "outputs": [],
@@ -642,10 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "**Note:** Whitehead ended up finding further proof that the Broad Street pump played the central role in spreading the disease to the people who lived near it. Eventually, he became one of Snow’s greatest defenders."
    ]
@@ -654,10 +623,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8. Welcome Survey\n"
+    "## 8. Welcome Survey\n",
+    "\n",
+    "If you haven't done so already, fill out the [class survey](https://docs.google.com/forms/d/e/1FAIpQLSd3Nieezo-yNWU2VVPFpOva5GAnAsKqfUu49S6n7ZUjGGsSsQ/viewform)."
    ]
   },
-
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -671,15 +641,13 @@
     "collapsed": true
    },
    "source": [
-    "Once you're finished, select \"Save and Checkpoint\" in the File menu and then execute the `submit` cell below. If you submit more than once before the deadline, we will only grade your final submission."
+    "Save your notebook to submit it.  If you save your file more than once before the deadline, we will only grade your final submission."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# For your convenience, you can run this cell to run all the tests at once!\n",
@@ -691,13 +659,13 @@
   }
  ],
  "metadata": {
+  "assignment": "hw01",
+  "course": "SJCC",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
-  "assignment": "hw01",
-  "course": "SJCC",
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -708,10 +676,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "version": "3.6.7"
   },
   "section": "1"
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
