--- a/hw/hw04/hw04.ipynb
+++ b/hw/hw04/hw04.ipynb
@@ -508,9 +508,8 @@
    },
    "source": [
     "Congratulations, you're done with Homework 4!  Be sure to \n",
-    "- **run all the tests and verify that they all pass** (the next cell has a shortcut for that), \n",
-    "- **Save and Checkpoint** from the `File` menu,\n",
-    "- **Hit the Submit button** Your submission will be saved and grade will be posted when it's finished running."
+    "- **Run all the tests and verify that they all pass** (the next cell has a shortcut for that), \n",
+    "- **Save and Checkpoint** from the `File` menu,"
    ]
   },
   {
