--- a/lec/T11-Demo.ipynb
+++ b/lec/T11-Demo.ipynb
@@ -633,15 +633,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = Table().with_column('Net Gain', game_outcomes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "results = Table().with_column('Net Gain', game_outcomes)\n",
     "results"
    ]
   },
@@ -769,15 +761,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "voter = ages >= 18"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "voter = ages >= 18\n",
     "voter"
    ]
   },
@@ -791,12 +775,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "is_voter = are.above_or_equal_to(18)"
+    "## Monty Hall"
    ]
   },
   {
@@ -805,7 +787,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(is_voter)"
+    "doors = make_array('car', 'first goat', 'second goat')"
    ]
   },
   {
@@ -814,7 +796,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "is_voter(22)"
+    "goats = make_array('first goat', 'second goat')\n",
+    "\n",
+    "def other_goat(a_goat):\n",
+    "    if a_goat == 'first goat':\n",
+    "        return 'second goat'\n",
+    "    elif a_goat == 'second goat':\n",
+    "        return 'first goat'\n"
    ]
   },
   {
@@ -823,7 +811,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "is_voter(3)"
+    "other_goat('first goat')"
    ]
   },
   {
@@ -832,7 +820,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "age.apply(is_voter, 'Age')"
+    "other_goat('second goat')"
    ]
   },
   {
@@ -841,7 +829,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ages >= 18"
+    "other_goat('car')"
    ]
   },
   {
@@ -850,7 +838,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "voter"
+    "def monty_hall():\n",
+    "    \n",
+    "    contestant_choice = np.random.choice(doors)\n",
+    "    \n",
+    "    if contestant_choice == 'first goat':\n",
+    "        monty_choice = 'second goat'\n",
+    "        remaining_door = 'car'\n",
+    "        \n",
+    "    elif contestant_choice == 'second goat':\n",
+    "        monty_choice = 'first goat'\n",
+    "        remaining_door = 'car'\n",
+    "        \n",
+    "    elif contestant_choice == 'car':\n",
+    "        monty_choice = np.random.choice(goats)\n",
+    "        remaining_door = other_goat(monty_choice)\n",
+    "        \n",
+    "    return make_array(contestant_choice, monty_choice, remaining_door)"
    ]
   },
   {
@@ -859,8 +863,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def my_voter_function(x):\n",
-    "    return x >= 18"
+    "monty_hall()"
    ]
   },
   {
@@ -869,7 +872,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "age.where('Age', are.above_or_equal_to(18))"
+    "games = Table(make_array('Guess', 'Revealed', 'Remaining'))\n",
+    "games"
    ]
   },
   {
@@ -878,7 +882,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "age.where(voter)"
+    "games.append(monty_hall())"
    ]
   },
   {
@@ -887,7 +891,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "age.where('Age', my_voter_function)"
+    "games = Table(make_array('Guess', 'Revealed', 'Remaining'))\n",
+    "for i in range(10000):\n",
+    "    games.append(monty_hall())\n",
+    "    \n",
+    "games"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "stay = games.group('Guess')\n",
+    "stay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counts = stay.column('count')\n",
+    "prob_of_winning_stay = counts.item(0) / sum(counts)\n",
+    "prob_of_winning_stay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "switch = games.group('Remaining')\n",
+    "switch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counts = switch.column('count')\n",
+    "prob_of_winning_switch = counts.item(0) / sum(counts)\n",
+    "prob_of_winning_switch"
    ]
   },
   {
@@ -915,7 +967,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
