--- a/lec/T12-simulating-statistics.ipynb
+++ b/lec/T12-simulating-statistics.ipynb
@@ -51,6 +51,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Probability & Empirical Distributions of a Statistic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Please run all cells before this cell, including the import cell at the top of the notebook.**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -115,6 +129,68 @@
    "outputs": [],
    "source": [
     "Table().with_column('Sample medians', sample_medians).hist(bins = np.arange(-10,31))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Empirical Distributions Overlayed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Please run all cells before this cell, including the import cell at the top of the notebook.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_medians_10 = make_array()\n",
+    "sample_medians_100 = make_array()\n",
+    "sample_medians_1000 = make_array()\n",
+    "\n",
+    "num_simulations = 2000\n",
+    "\n",
+    "for i in np.arange(num_simulations):\n",
+    "    new_median_10 = sample_median(10)\n",
+    "    sample_medians_10 = np.append(sample_medians_10, new_median_10)\n",
+    "    new_median_100 = sample_median(100)\n",
+    "    sample_medians_100 = np.append(sample_medians_100, new_median_100)\n",
+    "    new_median_1000 = sample_median(1000)\n",
+    "    sample_medians_1000 = np.append(sample_medians_1000, new_median_1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_medians = Table().with_columns('Size 10', sample_medians_10, \n",
+    "                                      'Size 100', sample_medians_100,\n",
+    "                                      'Size 1000', sample_medians_1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_medians.hist(bins = np.arange(-5, 30))"
    ]
   },
   {
