Revert "fix lab07"
This reverts commit 93de1e5e6b9d33dd833769bcd4b5d38a2da76d5d.

--- a/lab/lab07/lab07.ipynb
+++ b/lab/lab07/lab07.ipynb
@@ -60,6 +60,7 @@
    },
    "outputs": [],
    "source": [
+    "possible_rolls = ...\n",
     "roll_result = ...\n",
     "modified_result = ...\n",
     "action_succeeded = ...\n",
