Push demo files T15-gender-discrimination.ipynb to class

--- a/lec/T15-gender-discrimination.ipynb
+++ b/lec/T15-gender-discrimination.ipynb
@@ -83,9 +83,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "random_sample = GenderPromotion.select('Gender').sample(35, with_replacement=False)\n",
-    "random_sample = random_sample.with_column('Promoted', 'Yes')\n",
-    "random_sample"
+    "shuffled_labels = GenderPromotion.sample(with_replacement = False).column('Promoted')\n",
+    "shuffled_labels"
    ]
   },
   {
@@ -94,9 +93,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pivot_table_sample = random_sample.pivot('Promoted', 'Gender')\n",
-    "summary_sample = pivot_table_sample.with_column('Percent', pivot_table_sample.column('Yes')/24)\n",
-    "summary_sample"
+    "shuffled_table = GenderPromotion.select('Gender').with_column('Promoted', shuffled_labels)\n",
+    "shuffled_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shuffled_pivot_table = shuffled_table.pivot('Promoted', 'Gender')\n",
+    "shuffled_summary = shuffled_pivot_table.with_column('Percent', shuffled_pivot_table.column('Yes')/24)\n",
+    "shuffled_summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shuffled_summary.column('Percent').item(1) - shuffled_summary.column('Percent').item(0)"
    ]
   },
   {
@@ -109,11 +127,11 @@
     "# under the hypothesis that promotion is randomly determined\n",
     "\n",
     "def random_sample_percent_difference():\n",
-    "    random_sample = GenderPromotion.select('Gender').sample(35, with_replacement=False)\n",
-    "    random_sample = random_sample.with_column('Promoted', 'Yes')\n",
-    "    pivot_table_sample = random_sample.pivot('Promoted', 'Gender')\n",
-    "    summary_sample = pivot_table_sample.with_column('Percent', pivot_table_sample.column('Yes')/24)\n",
-    "    return summary_sample.column('Percent').item(1) - summary_sample.column('Percent').item(0)"
+    "    shuffled_labels = GenderPromotion.sample(with_replacement = False).column('Promoted')\n",
+    "    shuffled_table = GenderPromotion.select('Gender').with_column('Promoted', shuffled_labels)\n",
+    "    shuffled_pivot_table = shuffled_table.pivot('Promoted', 'Gender')\n",
+    "    shuffled_summary = shuffled_pivot_table.with_column('Percent', shuffled_pivot_table.column('Yes')/24)\n",
+    "    return shuffled_summary.column('Percent').item(1) - shuffled_summary.column('Percent').item(0)"
    ]
   },
   {
@@ -123,11 +141,13 @@
    "outputs": [],
    "source": [
     "# Simulate 10,000 copies of the test statistic\n",
+    "# this code might take a few seconds to run\n",
     "\n",
     "sample_difference = make_array()\n",
     "\n",
     "for i in np.arange(10000):\n",
-    "    sample_difference = np.append(sample_difference, random_sample_percent_difference())   "
+    "    new_difference = random_sample_percent_difference()\n",
+    "    sample_difference = np.append(sample_difference, new_difference)   "
    ]
   },
   {
@@ -172,7 +192,7 @@
    "outputs": [],
    "source": [
     "differences_tbl.hist(bins = 10)\n",
-    "plots.plot([five_percent_point, five_percent_point], [0, 5], color='gold', lw=2)\n",
+    "plots.plot([five_percent_point, five_percent_point], [0, 3], color='gold', lw=2)\n",
     "plots.title('Area to the left of the gold line: 5%');"
    ]
   },
