Push demo files T17* to class

--- a/lec/T17-randomized-controlled-experiment.ipynb
+++ b/lec/T17-randomized-controlled-experiment.ipynb
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### From last lecture"
+    "### From last lecture (similar but slightly different)"
    ]
   },
   {
