Push demo files T18* to class

--- a/lec/T18-Bootstrap.ipynb
+++ b/lec/T18-Bootstrap.ipynb
@@ -121,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bootstrap"
+    "# Bootstrap: Sampling distribution of the median, if we only have a sample"
    ]
   },
   {
