Push demo files T18* to class

--- a/lec/T18-Bootstrap.ipynb
+++ b/lec/T18-Bootstrap.ipynb
@@ -139,7 +139,7 @@
    "source": [
     "### Take a bootstrap (re)sample of size 300, WITH replacement\n",
     "\n",
-    "boot_sample = our_sample.sample(300, with_replacement=True)\n",
+    "boot_sample = our_sample.sample(300, with_replacement = True)\n",
     "boot_sample.hist('Total Compensation', bins=sf_bins)\n",
     "print(\"Population Median = \", pop_median)\n",
     "print(\"Our Sample Median = \", our_sample_median)\n",
@@ -159,7 +159,7 @@
     "### NOTE: this whole simulation only uses our_sample! We never need to look at sf_pop\n",
     "\n",
     "def one_bootstrap_median():\n",
-    "    single_sample = our_sample.sample()\n",
+    "    single_sample = our_sample.sample(300, with_replacement = True)\n",
     "    return percentile(50, single_sample.column('Total Compensation'))\n",
     "\n",
     "bootstrap_medians = make_array()\n",
@@ -180,6 +180,13 @@
     "plots.scatter(pop_median, 0, color=\"red\");\n",
     "plots.scatter(our_sample_median, 0, color=\"blue\");"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
