Push lab lab10 to the class

--- a/lab/lab10/lab10.ipynb
+++ b/lab/lab10/lab10.ipynb
@@ -427,8 +427,6 @@
     "\n",
     "**Note**: *The last part of this lab is difficult to check automatically, so check with a coach at the end of the section and go over your answers with them.*\n",
     "\n",
-    "Since resampling from a sample looks just like sampling from a population, the code should look almost the same.  That means we can write a function that simulates the process of either sampling from a population or resampling from a sample.  If we pass in population as its argument, it will do the former; if we pass in a sample, it will do the latter.\n",
-    "\n",
     "#### Question 3.1\n",
     "Write a function called `simulate_estimates`.  It should take 4 arguments:\n",
     "1. A table from which the data should be sampled.  The table will have 1 column named `\"serial number\"`.\n",
@@ -436,7 +434,7 @@
     "3. A function that computes a statistic of a sample.  This argument is a *function* that takes an array of serial numbers as its argument and returns a number.\n",
     "4. The number of replications to perform.\n",
     "\n",
-    "It should simulate many samples with replacement from the given table.  (The number of samples is the 4th argument.)  For each of those samples, it should compute the statistic on that sample. Then it should return an array containing each of those statistics.  The code below provides an example use of your function and describes how you can verify that you've written it correctly."
+    "It should simulate many samples **with replacement** from the given table.  (The number of samples is the 4th argument.)  For each of those samples, it should compute the statistic on that sample. Then it should return an array containing each of those statistics.  The code below provides an example use of your function and describes how you can verify that you've written it correctly."
    ]
   },
   {
