Push demo files T19* to class

--- a/lec/T19-Bootstrap-case-study.ipynb
+++ b/lec/T19-Bootstrap-case-study.ipynb
@@ -104,7 +104,7 @@
    "source": [
     "Table().with_column('Bootstrap means', bootstrap_means).hist()\n",
     "plots.plot([left,right], [0,0], color=\"gold\", lw=3, zorder=1);\n",
-    "plots.scatter(mean_age,0,color=\"blue\", zorder=2);\n",
+    "plots.scatter(sample_mean,0,color=\"blue\", zorder=2);\n",
     "print(\"Our Sample Mean = \", sample_mean)\n",
     "print(\"A 95% Bootstrap CI for the Mean = [\", left, \",\", right, \"]\")"
    ]
@@ -176,7 +176,7 @@
     "\n",
     "Table().with_column('Bootstrap means', bootstrap_means).hist()\n",
     "plots.plot([left,right], [0,0], color=\"gold\", lw=3, zorder=1);\n",
-    "plots.scatter(mean_age,0,color=\"blue\", zorder=2);\n",
+    "plots.scatter(sample_mean,0,color=\"blue\", zorder=2);\n",
     "print(\"A 95% Bootstrap CI for the Mean = [\", left, \",\", right, \"]\")"
    ]
   },
@@ -219,7 +219,7 @@
     "\n",
     "Table().with_column('Bootstrap means', bootstrap_means).hist()\n",
     "plots.plot([left,right], [0,0], color=\"gold\", lw=3, zorder=1);\n",
-    "plots.scatter(mean_age,0,color=\"blue\", zorder=2);\n",
+    "plots.scatter(sample_mean,0,color=\"blue\", zorder=2);\n",
     "print(\"A 99% Bootstrap CI for the Mean = [\", left, \",\", right, \"]\")"
    ]
   },
